--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,7 @@ jobs:
               git clone "$REPO_URL" .
             fi
 
+            source venv/bin/activate
+
             pip install -r requirements.txt
 
